--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,8 @@
 [tox]
-envlist = py35, py36, py37, py38, format-code, check-format
+envlist = py35, py36, py37, format-code, check-format
 
 [travis]
 python =
-    3.8: py38
     3.7: py37
     3.6: py36
     3.5: py35
