--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,13 @@ python:
   - 3.5
 
 # Command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: pip install -U tox-travis
+install: pip install -U tox-travis coveralls
 
 # Command to run tests, e.g. python setup.py test
-script: tox
+script:
+  - make test-all
+  - make lint
+  -
 
 # Assuming you have installed the travis-ci CLI tool, after you
 # create the Github repo and add it to Travis, run the
@@ -25,4 +28,7 @@ deploy:
   on:
     tags: true
     repo: cenkbircanoglu/wsl_survey
-    python: 3.8
+    python: 3.7
+
+after_success:
+  - coveralls
