--- a/scripts/acol/coco2017.yml
+++ b/scripts/acol/coco2017.yml
@@ -17,3 +17,20 @@ services:
                     --checkpoints=/models/acol-coco2017
         runtime: ${RUNTIME}
         shm_size: '8gb'
+    evaluator:
+        volumes:
+            - ~/wsl/datasets:/datasets
+            - ~/wsl/models:/models
+        image: ${IMAGE}
+        environment:
+            NVIDIA_VISIBLE_DEVICES: all
+            COMMAND: >
+                python3 /app/wsl_survey/acol/evaluate.py
+                    --dataset_dir=/datasets/coco2017/labelled
+                    --image_dir=/datasets/coco2017/images
+                    --arch=vgg_v1
+                    --num_gpu=1
+                    --disp_interval=40
+                    --checkpoints=/models/acol-coco2017
+        runtime: ${RUNTIME}
+        shm_size: '8gb'
