--- a/scripts/gradcam/voc2012.yml
+++ b/scripts/gradcam/voc2012.yml
@@ -14,3 +14,17 @@ services:
                     --checkpoints=/models/gradcam-voc2012
         runtime: ${RUNTIME}
         shm_size: '8gb'
+    evaluator:
+        volumes:
+            - ~/wsl/datasets:/datasets
+            - ~/wsl/models:/models
+        image: ${IMAGE}
+        environment:
+            NVIDIA_VISIBLE_DEVICES: all
+            COMMAND: >
+                python3 /app/wsl_survey/gradcam/evaluate.py
+                    --dataset_dir=/datasets/voc2012/labelled
+                    --image_dir=/datasets/voc2012/data/JPEGImages
+                    --checkpoints=/models/gradcam-voc2012
+        runtime: ${RUNTIME}
+        shm_size: '8gb'
