cam evaluate false for coco

--- a/scripts/irn/coco2014.yml
+++ b/scripts/irn/coco2014.yml
@@ -12,5 +12,6 @@ services:
                     --dataset_dir=/datasets/coco2014/labelled
                     --image_dir=/datasets/coco2014/data/images
                     --checkpoints=/models/irn-coco2014
+                    --eval_cam_pass=False
         runtime: ${RUNTIME}
         shm_size: '8gb'
