--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ setenv =
 deps =
     :preinstall: Cython
     :preinstall: numpy
-    :preinstall: pillow
+    :preinstall: pillow==6.1
     :preinstall: scikit-image
     -r{toxinidir}/requirements/dev.txt
 ; If you want to make tox run the tests with the same versions, create a
@@ -30,5 +30,5 @@ deps =
 ;     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
-    pytest --basetemp={envtmpdir} --doctest-modules
+    pytest --doctest-modules
 
