--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,6 @@ deps =
 ; requirements.txt with the pinned versions and uncomment the following line:
 ;     -r{toxinidir}/requirements.txt
 commands =
-    pip install -U pip
-    pytest --doctest-modules
+    pip install -U pip nose
+    nosetests --with-doctest
 
