update .git files

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,18 @@ ENV/
 rsync.sh
 !/datasets/test
 data/*
+wsl_survey/utils/bbox_results_big.eps
+data/voc12/cls_labels_unique.npy
+
+Digraph.gv
+Digraph.gv.pdf
+bbox_results.txt
+cam_results_on_compcars.numbers
+compcars_outputs/
+download.sh
+git_remove_big_files.sh
+outputs/
+results.txt
+test.jpg
+upload.sh
+
